--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BonAppetit">
-        <activity android:name=".Act3Menu"
         android:theme="@style/Theme.BonAppetit"
         android:hardwareAccelerated="true">
-        <activity android:name=".ScannerTableCode"
+        <activity android:name=".Act3Menu"/>
+        <activity android:name=".Act2ScannerTableCode"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
