--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,18 @@
     <application
         android:name=".RealmInitialitation"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BonAppetit"
-        android:hardwareAccelerated="true">
-        <activity android:name=".Act3Menu"/>
-        <activity android:name=".Act2ScannerTableCode"
+        android:theme="@style/Theme.BonAppetit">
+        <activity
+            android:name=".`Act1-2Login`"
+            android:exported="true" />
+        <activity android:name=".Act3Menu" />
+        <activity
+            android:name=".Act2ScannerTableCode"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
     </application>
