--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BonAppetit">
         <activity
+            android:name=".Act1_1BeforeLogin"
+            android:exported="true" />
+        <activity
+            android:name=".Act1_0Screen"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".Act1_2Login"
             android:exported="true" />
         <activity android:name=".Act3Menu" />
