--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,30 @@ android {
     buildFeatures{
         viewBinding = true
     }
+
+    buildFeatures{
+        dataBinding true
+    }
 }
 
 dependencies {
+    def roomVersion = "2.3.0"
+    def glideVersion = "4.12.0"
+    def retrofitVersion = "2.9.0"
+
+    // Room
+    implementation "androidx.room:room-ktx:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+
+    // Networking con Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
+    // glide
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+
 
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
