--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="org.bedu.bonappetit">
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
 
