Agregué ventana para poder proceder a pagar, para ello coloqué una base de datos en Room que vaya guardadndo los platillos a consumir

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BonAppetit">
+        <activity android:name=".Act4Payment"></activity>
         <activity
             android:name=".Act1_2Login"
             android:exported="true" />
