--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,16 +35,19 @@
             android:name=".Act1_2Login"
             android:exported="true" />
         <activity android:name=".Act3Menu" />
-        <activity android:name=".Act2ScannerTableCode" />
-        <activity android:name=".Act1_4Offers" />
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".Act2ScannerTableCode"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Act1_4Offers" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
         </activity>
         <activity android:name=".Act1_3Register" />
         <activity
