Se agrega segunda opcion para el registro con firebase

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 
 
 
-    implementation platform('com.google.firebase:firebase-bom:28.4.1')
+    implementation platform('com.google.firebase:firebase-bom:28.4.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx'
@@ -94,3 +94,5 @@ dependencies {
 
 }
 apply plugin: 'realm-android'
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
