--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,8 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
-
+    // Toasty
+    implementation 'com.github.GrenderG:Toasty:1.5.0'
 
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
