--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // Conekta
+    implementation('io.conekta:conektasdk:2.0') {
+        exclude group: 'com.android.support'
+    }
 
 
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
