--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="org.bedu.bonappetit">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
 
@@ -19,6 +20,9 @@
         <uses-library
             android:name ="org.apache.http.legacy"
             android:required ="false"/>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/> <activity android:name="com.facebook.FacebookActivity" android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" /> <activity android:name="com.facebook.CustomTabActivity" android:exported="true"> <intent-filter> <action android:name="android.intent.action.VIEW" /> <category android:name="android.intent.category.DEFAULT" /> <category android:name="android.intent.category.BROWSABLE" /> <data android:scheme="@string/fb_login_protocol_scheme" /> </intent-filter> </activity>
+
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/iconopizza" />
@@ -33,7 +37,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <activity android:name=".Act4_co"></activity>
+        <activity android:name=".Act4Payment"></activity>
         <activity
             android:name=".Act1_2Login"
             android:exported="true" />
@@ -41,6 +45,8 @@
         <activity android:name=".Act2ScannerTableCode" />
         <activity android:name=".Act1_4Offers" />
         <activity android:name=".Act1_3Register" />
+        <activity android:name=".Act4_Conekta" />
+        <activity android:name=".Act4_PaymentSuccess" />
         <activity
             android:name=".Act1_1BeforeLogin"
             android:exported="true">
@@ -61,6 +67,14 @@
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
+
+        <provider
+            android:name="com.facebook.FacebookContentProvider"
+            android:authorities="com.facebook.app.FacebookContentProvider652073335787077"
+            android:exported="true"
+            tools:ignore="ExportedContentProvider" />
     </application>
+
+
 
 </manifest>
