--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ plugins {
 android {
     signingConfigs {
         debug {
-            storeFile file('C:\\Users\\campo\\Documents\\Nueva carpeta\\debug.keystore')
+            storeFile file('C:\\Users\\erick\\Downloads\\Llave\\debug.keystore')
             storePassword 'android'
             keyAlias 'android'
             keyPassword 'android'
@@ -112,6 +112,9 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation 'com.google.android.material:material:1.4.0'
+
+    //    Fresco
+    implementation 'com.facebook.fresco:fresco:2.5.0'
 
 }
 apply plugin: 'realm-android'
